cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 11)
project(poker_server)
SET(BOOST_ROOT "C:/mylibs/stock/boost_1_88_0")
find_package(Boost REQUIRED COMPONENTS system)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(poker_server source_code/main.cpp source_code/UdpServer.cpp source_code/Logger.cpp)
target_link_libraries(poker_server PRIVATE Boost::system)